made little changes

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
 <footer>
     <div class="footer-content">
-        <p>Project 329</p>
-        <p>&copy; 2023 Group 38</p>
+        <p>MedicMatch</p>
+        <p>&copy; 2024 Group 3</p>
     </div>
 </footer>
 
