added two functionality more for deleting doctor and deleting hospital in admin panel , only added front end

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <header>
     <div class="logo">
-        Project 329
+        MedicMatch
     </div>
     <nav>
         <ul>
@@ -73,7 +73,7 @@
             </div>
 
             <div class="team-member">
-                <img src="images/Rafi.jpg" alt="Team Member 3">
+                <!-- <img src="images/Rafi.jpg" alt="Team Member 3"> -->
                 <h3>Abu Ahamed Rafi</h3>
                 <p><a href="https://www.facebook.com/abuahamedrafi/">FaceBook</a></p>
                 <p><a href="https://github.com/AbuAhamedRafi">Github profile</a></p>
@@ -89,7 +89,7 @@
             </div>
 
             <div class="team-member">
-                <img src="images/Tousif.jpg" alt="Team Member 5">
+                <img src="images/Rafi.jpg" alt="Team Member 5">
                 <h3>Tausif Ertiza Sameer</h3>
                 <p><a href="https://www.facebook.com/profile.php?id=100008792920230">FaceBook</a></p>
                 <p><a href="https://github.com/ErtizaSameer1227">Github profile</a></p>
