changed index.html file login file and also cost.php file, just small changes

--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
             </div>
 
             <div class="team-member">
-                <img src="images/Orpa.jpg" alt="Team Member 1">
-                <h3>Jannat Orpa</h3>
-                <p><a href="https://www.facebook.com/jannat.orpa.100">Facebook</a></p>
-                <p><a href="https://github.com/Jannatorpa">GitHub Profile</a></p>
-                <p>Fusce porta ante nec ligula facilisis, at bibendum tortor viverra.</p>
+                <img src="images/sanjidul.jpg" alt="Team Member 1">
+                <h3>Sanjidul Alam Chowdhury</h3>
+                <p><a href="https://www.facebook.com/sanjidulshahin">Facebook</a></p>
+                <p><a href="https://github.com/sanjidulshahin">GitHub Profile</a></p>
+                <p>Worked with the admin page front end and backend</p>
             </div>
             <div class="team-member">
-                <img src="images/Sarara.jpg" alt="Team Member 2">
-                <h3>Sarara Akbar</h3>
-                <p><a href="https://www.facebook.com/sararaakbar">FaceBook</a></p>
-                <p><a href="https://github.com/sararaakbar">Github profile</a></p>
+                <img src="images/hamim.jpg" alt="Team Member 2">
+                <h3>Hamim Rahman</h3>
+                <p><a href="https://www.facebook.com/hamimrahman">FaceBook</a></p>
+                <p><a href="https://github.com/enigma1025">Github profile</a></p>
                 <p>Fusce porta ante nec ligula facilisis, at bibendum tortor viverra.</p>
             </div>
 
             <div class="team-member">
-                <!-- <img src="images/Rafi.jpg" alt="Team Member 3"> -->
+                <img src="images/Rafi.jpg" alt="Team Member 3">
                 <h3>Abu Ahamed Rafi</h3>
                 <p><a href="https://www.facebook.com/abuahamedrafi/">FaceBook</a></p>
                 <p><a href="https://github.com/AbuAhamedRafi">Github profile</a></p>
@@ -88,14 +88,14 @@
                 <p>Fusce porta ante nec ligula facilisis, at bibendum tortor viverra.</p>
             </div>
 
-            <div class="team-member">
+            <!-- <div class="team-member">
                 <img src="images/Rafi.jpg" alt="Team Member 5">
                 <h3>Tausif Ertiza Sameer</h3>
                 <p><a href="https://www.facebook.com/profile.php?id=100008792920230">FaceBook</a></p>
                 <p><a href="https://github.com/ErtizaSameer1227">Github profile</a></p>
                 <p>Fusce porta ante nec ligula facilisis, at bibendum tortor viverra.</p>
             </div>
-        </div>    
+        </div>     -->
 </section>
 
 <footer>
