added member img

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Project 329</title>
+    <title>MedicMatch</title>
     <link rel="icon" href="images/logo.png" sizes="16x16" type="image/png">
     <link rel="icon" href="images/logo.png" sizes="32x32" type="image/png">
     <link rel="apple-touch-icon" href="images/logo.png">
@@ -81,21 +81,21 @@
             </div>
 
             <div class="team-member">
-                <img src="images/Sadi.jpg" alt="Team Member 4">
-                <h3>Safwan Sadi</h3>
-                <p><a href="https://www.facebook.com/safwan.sadi.9">FaceBook</a></p>
-                <p><a href="https://github.com/Safwan3000">Github profile</a></p>
+                <img src="images/samira.jpeg" alt="Team Member 4">
+                <h3>Umme Samira Jannat</h3>
+                <p><a href="https://www.facebook.com/ummesamira">FaceBook</a></p>
+                <p><a href="https://github.com/ummesamira">Github profile</a></p>
                 <p>Fusce porta ante nec ligula facilisis, at bibendum tortor viverra.</p>
             </div>
 
-            <!-- <div class="team-member">
-                <img src="images/Rafi.jpg" alt="Team Member 5">
-                <h3>Tausif Ertiza Sameer</h3>
+            <div class="team-member">
+                <img src="images/nirjhona.jpg" alt="Team Member 5">
+                <h3>Umme Khadija Nirjhona</h3>
                 <p><a href="https://www.facebook.com/profile.php?id=100008792920230">FaceBook</a></p>
                 <p><a href="https://github.com/ErtizaSameer1227">Github profile</a></p>
                 <p>Fusce porta ante nec ligula facilisis, at bibendum tortor viverra.</p>
             </div>
-        </div>     -->
+        </div>    
 </section>
 
 <footer>
