completed user view part

--- a/cost.html
+++ b/cost.html
@@ -1,99 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Project 329</title>
-    <link rel="icon" href="images/logo.png" sizes="16x16" type="image/png">
-    <link rel="icon" href="images/logo.png" sizes="32x32" type="image/png">
-    <link rel="apple-touch-icon" href="images/logo.png">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,500,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="cost.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>MedicMatch</title>
+    <link rel="icon" href="images/logo.png" sizes="16x16" type="image/png" />
+    <link rel="icon" href="images/logo.png" sizes="32x32" type="image/png" />
+    <link rel="apple-touch-icon" href="images/logo.png" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="cost.css" />
+  </head>
+  <body>
     <header>
-        <div class="logo">Project 329</div>
-        <nav>
-            <ul><li><a href="index.html">Home</a></li></ul>
-        </nav>
+      <div class="logo">MedicMatch</div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+        </ul>
+      </nav>
     </header>
 
     <section>
-        <div class="form-container">
-            <form id="dataForm" method="post" action="input.php">
-                <div class="form-row">
-                    <label for="hospital_type">Hospital Type:</label>
-                    <select name="hospital_type" id="hospital_type">
-                        <option value="hospital_1">Government</option>
-                        <option value="hospital_2">Private</option>
-                        <option value="hospital_3">Chamber/Clinic</option>
-                    </select>
-                </div>
-                <div class="form-row">
-                    <label for="speciality">Speciality:</label>
-                    <select name="speciality" id="speciality">
-                        <option value="speciality_1">Cardiology</option>
-                        <option value="speciality_2">Urology</option>
-                        <option value="speciality_3">Dermatology</option>
-                        <option value="speciality_4">Radiologist</option>
-                        <option value="speciality_5">Pediatrician</option>
-                        <option value="speciality_6">Nuerologist</option>
-                        <option value="speciality_7">Gynacologist</option>
+      <div class="form-container">
+        <form id="dataForm" method="post" action="input.php">
+          <div class="form-row">
+            <label for="hospital_type">Hospital Type:</label>
+            <select name="hospital_type" id="hospital_type">
+              <option value="hospital_1">Government</option>
+              <option value="hospital_2">Private</option>
+              <option value="hospital_3">Chamber/Clinic</option>
+            </select>
+          </div>
+          <div class="form-row">
+            <label for="speciality">Speciality:</label>
+            <select name="speciality" id="speciality">
+              <option value="speciality_1">Cardiology</option>
+              <option value="speciality_2">Urology</option>
+              <option value="speciality_3">Dermatology</option>
+              <option value="speciality_4">Radiologist</option>
+              <option value="speciality_5">Pediatrician</option>
+              <option value="speciality_6">Nuerologist</option>
+              <option value="speciality_7">Gynacologist</option>
 
-                        <!-- Add more options as needed -->
-                    </select>
-                </div>
-                <div class="form-row">
-                    <label for="price">Price:</label>
-                    <input type="number" id="price" name="price" min="0">
-                </div>
-                <div class="form-row">
-                    <input type="submit" value="Show Prices">
-                </div>
-            </form>
-        </div>
+              <!-- Add more options as needed -->
+            </select>
+          </div>
+          <div class="form-row">
+            <label for="price">Price:</label>
+            <input type="number" id="price" name="price" min="0" />
+          </div>
+          <div class="form-row">
+            <input type="submit" value="Show Prices" />
+          </div>
+        </form>
+      </div>
 
-        <!-- New table section -->
-        <div class="table-container" style="padding: 20px;">
-            <table class="data-table">
-                <thead>
-                    <tr>
-                        <th>Hospital Name</th>
-                        <th>Hospital ID</th>
-                        <th>Hospital Type</th>
-                        <th>Hospital Address</th>
-                        <th>Hospital Bill</th>
-                        <th>Doctor ID</th>
-                        <th>Hospital ID</th>
-                        <th>Doctor Name</th>
-                        <th>Doctor Specialization </th>
-                        <th>Cost of Visit </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Row 1 -->
-                    <tr>
-                        <td>Data 1</td>
-                        <td>Data 2</td>
-                        <td>Data 3</td>
-                    </tr>
-                    <!-- Add more rows as needed -->
-                    <!-- Row 2 -->
-                    <tr>
-                        <td>Data 4</td>
-                        <td>Data 5</td>
-                        <td>Data 6</td>
-                    </tr>
-                    <!-- ... -->
-                </tbody>
-            </table>
-        </div>
+      <!-- New table section -->
+      <div class="table-container" style="padding: 20px">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th>Hospital Name</th>
+              <th>Hospital ID</th>
+              <th>Hospital Type</th>
+              <th>Hospital Address</th>
+              <th>Hospital Bill</th>
+              <th>Doctor ID</th>
+              <th>Hospital ID</th>
+              <th>Doctor Name</th>
+              <th>Doctor Specialization</th>
+              <th>Cost of Visit</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Row 1 -->
+            <tr>
+              <td>Data 1</td>
+              <td>Data 2</td>
+              <td>Data 3</td>
+            </tr>
+            <!-- Add more rows as needed -->
+            <!-- Row 2 -->
+            <tr>
+              <td>Data 4</td>
+              <td>Data 5</td>
+              <td>Data 6</td>
+            </tr>
+            <!-- ... -->
+          </tbody>
+        </table>
+      </div>
     </section>
 
     <footer>
-        <div class="footer-content">
-            <p>Project 329</p>
-            <p>©2023 Group 38</p>
-        </div>
+      <div class="footer-content">
+        <p>MedicMatch</p>
+        <p>©2024 group 3</p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
