--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <header>
     <div class="logo">
-        Project 329
+        MedicMatch
     </div>
     <nav>
         <ul>
@@ -50,34 +50,17 @@
 </section>
 
 <section>
+    <h2 class="meet">Meet Our Team</h2>
     <section class="second-section">
-        <h2 class="meet">Meet Our Team</h2>
-        <div class="grid-container">
-            <div class="grid-item">
-                <div class="wrapper">
-                    <div class="card front-face">
-                       <img src="images/Rivu.jpg">
-                    </div>
-                    <div class="card back-face">
-                       <img src="images/Rivu.jpg">
-                       <div class="info">
-                          <div class="title">
-                             Developer
-                          </div>
-                          <p>
-                             User interface designer and <br>front-end developer
-                          </p>
-                       </div>
-                       <ul>
-                          <a href="#"><i class="fab fa-facebook-f"></i></a>
-                          <a href="#"><i class="fab fa-twitter"></i></a>
-                          <a href="#"><i class="fab fa-instagram"></i></a>
-                          <a href="#"><i class="fab fa-youtube"></i></a>
-                       </ul>
-                    </div>
-                 </div>
+         
+        
+            <div class="team-member">
+                <img src="images/Rivu.jpg" alt="Team Member 1">
+                <h3>Rivu Bhattacharjee</h3>
+                <p><a href="https://www.facebook.com/rivubhattacharjee">Facebook</a></p>
+                <p><a href="https://github.com/rive">GitHub Profile</a></p>
+                <p>Worked with the admin page front end and backend</p>
             </div>
-
             <div class="team-member">
                 <img src="images/sanjidul.jpg" alt="Team Member 1">
                 <h3>Sanjidul Alam Chowdhury</h3>
@@ -112,7 +95,7 @@
             <div class="team-member">
                 <img src="images/nirjhona.jpg" alt="Team Member 5">
                 <h3>Umme Khadija Nirjhona</h3>
-                <p><a href="https://www.facebook.com/profile.php?id=100008792920230">FaceBook</a></p>
+                <p><a href="https://www.facebook.com/profile.php?id=100008792920240">FaceBook</a></p>
                 <p><a href="https://github.com/ErtizaSameer1227">Github profile</a></p>
                 <p>Fusce porta ante nec ligula facilisis, at bibendum tortor viverra.</p>
             </div>
@@ -121,8 +104,8 @@
 
 <footer>
     <div class="footer-content">
-        <p>Project 329</p>
-        <p>&copy; 2023 Group 38</p>
+        <p>MedicMatch</p>
+        <p>&copy; 2024 group 3</p>
     </div>
 </footer>
 
