--- a/managebill.html
+++ b/managebill.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Project 329</title>
+    <title>MedicMatch</title>
     <link rel="icon" href="images/logo.png" sizes="16x16" type="image/png" />
     <link rel="icon" href="images/logo.png" sizes="32x32" type="image/png" />
     <link rel="apple-touch-icon" href="images/logo.png" />
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">Project 329</div>
+      <div class="logo">MedicMatch</div>
       <nav>
         <ul>
           <li><a href="index.html">Logout</a></li>
